     that have been added to this release, and disabled by default:

***  With --Wall, add DECLFILENAME warning on modules not matching filename.

***  With --Wall, add DEFPARAM warning on deprecated defparam statements.

***  With --Wall, add IFDEPTH warning on deep if statements.

***  With --Wall, add INCABSPATH warning on `include with absolute paths.

***  With --Wall, add UNDRIVEN warning on undriven nets.

***  With --Wall, add UNUSED warning on unused nets.

***  The VARHIDDEN warning is now disabled by default, use -Wall to enable.

* Verilator 3.805 2010/11/02

**** Add warning when directory contains spaces, msg378.  [Salman Sheikh]

**** Fix wrong filename on include file errors, bug289. [Brad Parker]

**** Fix segfault on SystemVerilog "output wire foo=0", bug291.  [Joshua Wise]

**** Fix DPI export name not found, msg369.  [Terry Chen]

* Verilator 3.804 2010/09/20

***  Support tracing/coverage of underscore signals, bug280.  [by Jason McMullan]

**** Fix preprocessor `` of existing base define, bug283.  [Usha Priyadharshini]

**** Increase define recursions before error.  [Paul Liu]

**** On core dump, print debug suggestions.

* Verilator 3.803 2010/07/10

***  Fix preprocessor preservation of newlines across macro substitutions.

**** Fix preprocessor stringification of nested macros.

**** Fix some constant parameter functions causing crash, bug253. [Nick Bowler]

**** Fix do {...} while() not requiring final semicolon.

* Verilator 3.802 2010/05/01

***  Support runtime access to public signal names.

***  Add /*verilator public_flat_rw*/ for timing-specific public access.

***  Fix word size to match uint64_t on -m64 systems, bug238. [Joe Eiler]

**** Improve error handling on slices of arrays, bug226. [by Byron Bradley]

**** Report errors when extra underscores used in meta-comments.

**** Fix bit reductions on multi-packed dimensions, bug227. [by Byron Bradley]

**** Fix removing $fscanf if assigned to unused var, bug248. [Ashutosh Das]
